[package]
name = "rhit"
version = "1.7.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/rhit"
description = "nginx log analyzer"
edition = "2021"
keywords = ["log", "nginx", "analyzer"]
license = "MIT"
categories = ["command-line-utilities"]
rust-version = "1.60"

[dependencies]
anyhow = "1.0.49"
argh = "0.1.10"
bet = "1.0"
cli-log = "2.0"
file-size = "1.0.3"
flate2 = "1.0.25"
have = "0.1.1"
itertools = "0.10"
lazy-regex = "2.5"
num-format = "0.4"
regex = "1.7"
smallvec = "1.10"
termimad = { version = "0.22.0", default-features = false, features = ["special-renders"] }
thiserror = "1.0"

[dev-dependencies]
glassbench = "0.3.3"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
strip = true

[[bench]]
name = "load_base"
harness = false
[[bench]]
name = "filter_resources"
harness = false

[patch.crates-io]
# bet = { path = "../bet" }
# cli-log = { path = "../cli-log" }
# have = { path = "../have" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# lazy-regex = { path = "../lazy-regex" }
