[package]
name = "rhit"
version = "2.0.3"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/rhit"
description = "nginx log analyzer"
edition = "2021"
keywords = ["log", "nginx", "analyzer"]
license = "MIT"
categories = ["command-line-utilities"]
rust-version = "1.60"

[dependencies]
bet = "1.0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.0.0"
cli-log = "2.0"
file-size = "1.0.3"
flate2 = "1.0.30"
have = "0.1.1"
itertools = "0.13"
lazy-regex = "3.3"
num-format = "0.4"
smallvec = "1.11"
termimad = { version = "0.30", default-features = false, features = ["special-renders"] }
thiserror = "1.0"

[dev-dependencies]
glassbench = "0.4"

[profile.release]
debug = false
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "load_base"
harness = false
[[bench]]
name = "filter_resources"
harness = false

[patch.crates-io]
# bet = { path = "../bet" }
# cli-log = { path = "../cli-log" }
# have = { path = "../have" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# lazy-regex = { path = "../lazy-regex" }
